# ulog-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BENCHMARK.md  CHANGELOG.md  Makefile  PRD-v0.2.1-ui-bugfixes.md  PRD-v0.4-commit-author-filter.md  PRD.md  README.md  RELEASE_NOTES.md  STABILITY.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-05-04-2051.md
_bmad-output/implementation-artifacts/: 1-1-pytest-plugin-entry-point-registration.md  1-10-xdist-windows-nfs-edge-cases.md  1-11-doc-page-docs-test-integration-md.md  1-12-test-isolation-when-plugin-active.md  1-13-sql-handler-create-table-race.md  1-2-test-event-recording-start-outcome-finish.md  1-3-test-id-stability-for-parametrized-tests.md  1-4-bound-context-propagation-of-test-id.md  1-5-pytest-cli-flags.md  1-6-tests-sidebar-list-failed-only-slowest-top-10.md  1-7-click-test-name-to-filter-records-by-test-id.md  1-8-detail-view-test-context-panel.md  1-9-programmatic-test-event-api-for-non-pytest-runners.md  2-1-authorindex-api-git-blame-porcelain-parsing.md  2-10-prd-v0-4-edge-cases-as-tests.md  2-11-doc-page-docs-author-filter-md.md  2-13-perf-hotpath-authors-summary-memoize.md  2-2-cli-flags-repo-no-author-index-rebuild-author-index.md  2-3-lazy-index-build-with-stderr-progress.md  2-4-authors-cache-table-sidecar-sqlite-for-jsonl-csv.md  2-5-unknown-author-handling.md  2-6-authors-sidebar-section-with-ghost-counts.md  2-7-multi-select-or-url-query-string-show-unknown.md  2-8-detail-view-test-context-panel.md  2-9-diff-sha-view-with-sha-validation.md  3-1-schema-extension-immutable-chain-pos-record-hash-prev-hash-columns.md  3-10-integrity-badge-data-plumbing-verify-state-json-sidecar.md  3-11-concurrency-stress-test-8-writers-10k-records.md  3-12-prd-v0-5-storage-chain-edge-cases.md  3-2-sql-trigger-blocking-update-delete-on-immutable-rows.md  3-3-schemaerror-upgrade-message-with-literal-alter-table-sql.md  3-4-chainwriter-protocol-sqlitechainwriter-impl.md  3-5-sqlhandler-chain-integration-wal-mode-begin-immediate.md  3-6-setup-new-params-integrity-immutable-when-min-retention-days.md  3-7-ulog-verify-cli-subcommand.md  3-8-ulog-repair-confirm-cli-subcommand.md  3-9-ulog-purge-before-date-cli-subcommand.md  4-1-replay-core-mappingproxytype-callback.md  4-10-prd-v0-5-edge-case-replay-write-attempt.md  4-2-replay-active-contextvar-is-replaying-flag.md  (+53 more)
_bmad-output/planning-artifacts/: architecture.md  epic-1.md  epic-2.md  epic-9.md  epics.md  implementation-readiness-report-2026-05-12.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docker/ulog-solutions/: docker-compose.yml
docs/: api-contracts.md  architecture.md  component-inventory.md  data-models.md  development-guide.md  index.md  intro.md  news-v0.3-test-integration.md  news-v0.4-author-attribution.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  vision-cross-language.md
docs/prds/: PRD-v0.1-core.md  PRD-v0.10-fleet-dashboard.md  PRD-v0.11-http-request-inspector.md  PRD-v0.12-call-stack-tracing.md  PRD-v0.13-local-fix-database.md  PRD-v0.14-known-bugs-auto-lookup.md  PRD-v0.15-community-solutions-site.md  PRD-v0.16-unified-solution-search.md  PRD-v0.17-log-import.md  PRD-v0.2-storage-and-ui.md  PRD-v0.3-test-integration.md  PRD-v0.4-commit-author-filter.md  PRD-v0.4.1-viewer-perf-hotpath.md  PRD-v0.4.2-docs-quality.md  PRD-v0.4.3-team-page.md  PRD-v0.4.4-perf-sub-second.md  PRD-v0.4.5-theme-swap-sync.md  PRD-v0.5-forensic-archive.md  PRD-v0.6-static-export.md  PRD-v0.6.1-snapshot-exports.md  PRD-v0.6.2-tailwind-build-pipeline.md  PRD-v0.6.3-cross-browser-playwright.md  PRD-v0.6.4-export-html-perf-gate.md  PRD-v0.7-test-execution-stack.md  PRD-v0.8-modern-frontend-stack.md  PRD-v0.8.1-docs-syntax-highlight.md  PRD-v0.9-resource-validity.md  index.md
docs/standards/: django-clean-code-standard.md
scripts/: _lib.sh  install_pngquant.sh  optimize_screenshots.sh  qa_screenshots.py  seed_bench_fixture.py  seed_demo_db.py  seed_demo_incidents.py
tests/: bench_export_html.py  coverage_matrix.md  e2e_helpers.py  test_author_cache.py  test_author_edge_cases.py  test_author_index.py  test_authors_detail_panel.py  test_authors_doc_page.py  test_authors_filter.py  test_authors_sidebar.py  test_authors_summary.py  test_bisect.py  test_bug_cache.py  test_call_stack.py  test_chain.py  test_chain_concurrency.py  test_chain_edge_cases.py  test_chain_emit.py  test_cheatsheet.py  test_cheatsheet_search.py  test_cli_flags_e2e.py  test_cli_purge.py  test_cli_queryability.py  test_cli_repair.py  test_cli_repo_flags.py  test_cli_trace.py  test_cli_verify.py  test_context.py  test_correlate.py  test_detail_view_e2e.py  test_diff_security_e2e.py  test_diff_view.py  test_docs_syntax_highlight.py  test_explain.py  test_export_html.py  test_export_html_e2e.py  test_filter_dsl.py  test_filter_form_htmx.py  test_filter_memory_e2e.py  test_fix.py  (+58 more)
ulog/: __init__.py  _bisect.py  _bug_cache.py  _chain.py  _color.py  _correlate.py  _filter_dsl.py  _fixes.py  _glyphs.py  _incidents.py  _issue_template.py  _otel.py  _reserved.py  _retention.py  _solutions.py  _solutions_client.py  _stack.py  _verify_state.py  context.py  fleet.py  formatters.py  replay.py  setup.py  spans.py
ulog/_cli/: __init__.py  __main__.py  cmd_bisect.py  cmd_bug_cache.py  cmd_correlate.py  cmd_enable_fts5.py  cmd_explain.py  cmd_export_html.py  cmd_fix.py  cmd_import.py  cmd_incidents.py  cmd_purge.py  cmd_repair.py  cmd_replay.py  cmd_snapshot.py  cmd_solutions.py  cmd_tail.py  cmd_trace.py  cmd_validate_resources.py  cmd_verify.py  cmd_web.py
ulog/_import/: __init__.py  importer.py  parsers.py
ulog/handlers/: __init__.py  csv_file.py  json_line.py  sql.py
ulog/testing/: __init__.py  _replay_records.py  pytest_plugin.py  test_event.py
ulog/web/: __init__.py  cli.py  context_processors.py  qa_strings.json  settings.py  urls.py
ulog/web/docs/: api.md  author-filter.md  (+8 more)
(+33 files in other folders)
