[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ulog"
version = "0.1.0"
description = "Stdlib `logging` upgraded — sensible defaults, ucolor formatters, byte-stable contract for CLI tools and pipelines"
authors = [{ name = "jojo8356" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["logging", "logger", "cli", "color", "structured", "json"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
# ULog has zero runtime dependencies on PyPI. `ucolor` is vendored as
# a git submodule under `vendor/ucolor-python/` (see README's "Submodules"
# section + INSTALL). Without ucolor installed, ULog falls back to an
# 8-color ANSI palette gracefully.
dependencies = []

[project.optional-dependencies]
# Storage backend for SQL handler + viewer adapters.
storage = ["sqlalchemy>=2.0"]
# Inspection viewer (Django + Tailwind + lucide icons).
web = [
    "django>=5.0",
    "sqlalchemy>=2.0",
    "django-lucide>=1.3",
]
# Web dev workflow: auto-refresh browser on .py change + headless
# screenshot generation (scripts/qa_screenshots.py).
# Gated on DEBUG=True at runtime so plain [web] installs see zero impact.
web-dev = [
    "django>=5.0",
    "sqlalchemy>=2.0",
    "django-lucide>=1.3",
    "django-browser-reload>=1.18",
    "playwright>=1.40",
]
# Pytest plugin runtime (Story 1.1 entry-point).
testing = ["pytest>=7.0", "pytest-xdist>=3.0"]
# Full dev environment — runtime + tests + linters + audit.
dev = [
    # runtime + test deps
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "sqlalchemy>=2.0",
    "django>=5.0",
    "django-lucide>=1.3",
    "django-browser-reload>=1.18",
    "playwright>=1.40",
    # linters + formatters (one tool per concern)
    "ruff>=0.6",          # lint + format (replaces black + isort + flake8 + pyupgrade)
    "mypy>=1.10",         # type checking (--strict)
    # deps + security audit
    "deptry>=0.20",       # detect missing/unused dependencies
    "pip-audit>=2.7",     # CVE scan against installed packages
    # workflow
    "pre-commit>=4.0",    # orchestrate the above on every commit
]

[project.entry-points.pytest11]
ulog = "ulog.testing.pytest_plugin"

[project.scripts]
ulog-web = "ulog.web.cli:main"

[project.urls]
Homepage = "https://github.com/jojo8356/ulog-python"
Issues = "https://github.com/jojo8356/ulog-python/issues"

[tool.setuptools.packages.find]
# Constrain auto-discovery to the `ulog` package only — keeps the
# `vendor/ucolor-python/` submodule from being misread as a sibling
# top-level package by setuptools 70+.
include = ["ulog*"]
exclude = ["tests*", "vendor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
exclude = ["scripts/", "vendor/"]

# Django ships without py.typed; django-stubs requires a runtime settings
# bootstrap we don't want as a dev dependency. Same story for ucolor
# (vendored as a submodule, gracefully optional at runtime).
[[tool.mypy.overrides]]
module = [
    "django.*",
    "ucolor",
    "ucolor.*",
]
ignore_missing_imports = true

# ---- Ruff: lint + format (replaces black + isort + flake8 + pyupgrade) ----
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["vendor", "_bmad-output", "_bmad", ".claude"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle errors + pyflakes + warnings
    "I",             # isort (import order)
    "UP",            # pyupgrade (modernize syntax)
    "B",             # flake8-bugbear (sneaky bugs)
    "C4",            # comprehensions
    "SIM",           # flake8-simplify
    "PT",            # pytest style
    "RET",           # return statements
    "PIE",           # misc improvements
    "RUF",           # ruff-specific rules
]
ignore = [
    "E501",          # line too long — handled by formatter
    "B008",          # function-call-in-default-argument (Django/FastAPI patterns)
    "PT011",         # pytest.raises too broad — over-strict for tests
    "RET504",        # unnecessary assignment before return — readability matters
    "SIM108",        # ternary if — sometimes if/else is clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "PT012"]   # tests legitimately use assert + multi-statement raises
"scripts/**" = ["B007"]          # scripts have one-off loops with unused vars

[tool.ruff.lint.isort]
known-first-party = ["ulog"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- Deptry: catch missing/unused declared dependencies ----
[tool.deptry]
known_first_party = ["ulog"]
extend_exclude = ["vendor", "scripts", "_bmad", "_bmad-output"]

[tool.deptry.per_rule_ignores]
# Used as Django INSTALLED_APPS / middleware, or wired through tool
# entry points / CLI — never imported from our source code.
DEP002 = [
    "django-lucide", "django-browser-reload", "pytest-xdist",
    # Dev tools — invoked as CLIs, not imported.
    "ruff", "mypy", "deptry", "pip-audit", "pre-commit", "playwright",
]
# `ucolor` is vendored as a git submodule under vendor/ucolor-python/
# and imported lazily via try/except — not a PyPI dependency.
DEP001 = ["ucolor"]
# Optional/lazy imports — deptry can't see the try/except gates.
DEP004 = ["sqlalchemy", "playwright"]

[tool.deptry.package_module_name_map]
django-browser-reload = "django_browser_reload"
django-lucide = "lucide"
pytest-xdist = "xdist"
